# pong-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: game_context.rs  game_state.rs  main.rs
src/helpers/: mod.rs  prelude.rs  screen.rs  shapes.rs  theme.rs
src/sprites/: ball.rs  player.rs
