[package]
name = "pong-rs"
version = "0.1.0"
edition = "2024"
authors = ["Jose Luis Leon <joseluis5000l@gmail.com>"]
license = "MIT"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
macroquad = "0.4.14"
winapi = "0.3.9"

[lints.clippy]
all = "warn"
style = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
