[package]
name = "pong-rs"
version = "0.1.0"
edition = "2024"
authors = ["Jose Luis Leon <joseluis5000l@gmail.com>"]
license = "MIT"

[dependencies]
env_logger = "0.11.8"
ggez = "0.9.3"
log = "0.4.27"
rand = "0.9.1"
winapi = "0.3.9"

[lints.clippy]
all = "warn"
style = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
